--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,16 @@
-name: Test App Project
+name: E2E Tests
 
 on:
-  push:
-    branches:
-      - main
-
+  deployment_status:
 jobs:
-  test:
+  run-e2es:
+    if: github.event_name == 'deployment_status' && github.event.deployment_status.state == 'success'
     runs-on: ubuntu-latest
-    container:
-      image: node:20
     steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install Dependencies
+      - uses: actions/checkout@v2
+      - name: Install dependencies
         run: npm ci
-
-      - name: Run Tests
+      - name: Run tests
         run: npm run test
-
-      - name: Build Project
-        run: npm run build
+        env:
+          BASE_URL: ${{ github.event.deployment_status.environment_url }}
