--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
+    "test:unit:fn": "jest --config jest.unit.node.config.ts",
+    "test:jsdom:component": "jest --config jest.unit.jsdom.config.ts",
     "test:watch": "jest --watch",
     "seed": "node prisma/seed.ts"
   },
