--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "test:unit:fn": "jest --config jest.unit.node.config.ts",
     "test:unit:component": "jest --config jest.unit.jsdom.config.ts",
+    "test:integration": "jest --config jest.integration.node.config.ts",
     "test:watch": "jest --watch",
     "seed": "node prisma/seed.ts"
   },
