added DATABASE_URL to pipeline configuration file

--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -46,6 +46,8 @@ jobs:
         run: npm run test:unit:component
       - name: Run Integration Tests
         run: npm run test:integration
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
   deploy:
     needs: test
