run e2e tests after scuccessfull deployment

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:unit:fn": "jest --config jest.unit.node.config.ts",
     "test:unit:component": "jest --config jest.unit.jsdom.config.ts",
     "test:integration": "jest --config jest.integration.node.config.ts",
+    "test:e2e": "jest --config jest.e2e.node.config.ts",
     "test:watch": "jest --watch",
     "seed": "node prisma/seed.ts"
   },
